--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "splunk-wait-fn",
     "version": "1.0.0",
-    "main": "index.js",
+    "scripts": { "test": "echo ok" },
     "dependencies": {}
   }
   
